// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`svgo async #loadConfig [async] should load config using filePath 1`] = `
Object {
  "dimensions": true,
  "expandProps": "end",
  "h2xConfig": null,
  "icon": true,
  "native": false,
  "noSemi": true,
  "plugins": null,
  "prettier": true,
  "prettierConfig": null,
  "ref": false,
  "replaceAttrValues": Array [
    Array [
      "#063855",
      "currentColor",
    ],
  ],
  "runtimeConfig": true,
  "svgProps": null,
  "svgo": true,
  "svgoConfig": null,
  "template": null,
  "titleProp": false,
}
`;

exports[`svgo async #loadConfig [async] should not load config with "runtimeConfig: false 1`] = `
Object {
  "dimensions": true,
  "expandProps": "end",
  "h2xConfig": null,
  "icon": true,
  "native": false,
  "noSemi": true,
  "plugins": null,
  "prettier": true,
  "prettierConfig": null,
  "ref": false,
  "replaceAttrValues": Array [
    Array [
      "#063855",
      "currentColor",
    ],
  ],
  "runtimeConfig": true,
  "svgProps": null,
  "svgo": true,
  "svgoConfig": null,
  "template": null,
  "titleProp": false,
  "useRuntimeConfig": false,
}
`;

exports[`svgo async #loadConfig [async] should use default config without state.filePath 1`] = `
Object {
  "dimensions": false,
  "expandProps": "end",
  "h2xConfig": null,
  "icon": false,
  "native": false,
  "plugins": null,
  "prettier": true,
  "prettierConfig": null,
  "ref": false,
  "replaceAttrValues": null,
  "runtimeConfig": true,
  "svgProps": null,
  "svgo": true,
  "svgoConfig": null,
  "template": null,
  "titleProp": false,
}
`;

exports[`svgo async #loadConfig [async] should work with custom config path 1`] = `
Object {
  "dimensions": true,
  "expandProps": "end",
  "h2xConfig": null,
  "icon": true,
  "native": false,
  "noSemi": true,
  "plugins": null,
  "prettier": true,
  "prettierConfig": null,
  "ref": false,
  "replaceAttrValues": Array [
    Array [
      "#063855",
      "currentColor",
    ],
  ],
  "runtimeConfig": true,
  "svgProps": null,
  "svgo": true,
  "svgoConfig": null,
  "template": null,
  "titleProp": false,
}
`;

exports[`svgo sync #loadConfig [sync] should load config using filePath 1`] = `
Object {
  "dimensions": true,
  "expandProps": "end",
  "h2xConfig": null,
  "icon": true,
  "native": false,
  "noSemi": true,
  "plugins": null,
  "prettier": true,
  "prettierConfig": null,
  "ref": false,
  "replaceAttrValues": Array [
    Array [
      "#063855",
      "currentColor",
    ],
  ],
  "runtimeConfig": true,
  "svgProps": null,
  "svgo": true,
  "svgoConfig": null,
  "template": null,
  "titleProp": false,
}
`;

exports[`svgo sync #loadConfig [sync] should not load config with "runtimeConfig: false 1`] = `
Object {
  "dimensions": true,
  "expandProps": "end",
  "h2xConfig": null,
  "icon": true,
  "native": false,
  "noSemi": true,
  "plugins": null,
  "prettier": true,
  "prettierConfig": null,
  "ref": false,
  "replaceAttrValues": Array [
    Array [
      "#063855",
      "currentColor",
    ],
  ],
  "runtimeConfig": true,
  "svgProps": null,
  "svgo": true,
  "svgoConfig": null,
  "template": null,
  "titleProp": false,
  "useRuntimeConfig": false,
}
`;

exports[`svgo sync #loadConfig [sync] should use default config without state.filePath 1`] = `
Object {
  "dimensions": false,
  "expandProps": "end",
  "h2xConfig": null,
  "icon": false,
  "native": false,
  "plugins": null,
  "prettier": true,
  "prettierConfig": null,
  "ref": false,
  "replaceAttrValues": null,
  "runtimeConfig": true,
  "svgProps": null,
  "svgo": true,
  "svgoConfig": null,
  "template": null,
  "titleProp": false,
}
`;

exports[`svgo sync #loadConfig [sync] should work with custom config path 1`] = `
Object {
  "dimensions": true,
  "expandProps": "end",
  "h2xConfig": null,
  "icon": true,
  "native": false,
  "noSemi": true,
  "plugins": null,
  "prettier": true,
  "prettierConfig": null,
  "ref": false,
  "replaceAttrValues": Array [
    Array [
      "#063855",
      "currentColor",
    ],
  ],
  "runtimeConfig": true,
  "svgProps": null,
  "svgo": true,
  "svgoConfig": null,
  "template": null,
  "titleProp": false,
}
`;
